# WellNoosh-app

./: .env.example  .gitignore  .replit  App-working.tsx  App.tsx  CLEANUP_TEMP.md  DATABASE_ARCHITECTURE.md  DeveloperApp.tsx  README.md  RECOMMENDATION_SETUP.md  UI_IMPROVEMENTS_SUMMARY.md  add_nutrition_columns.sql  app.json  debug-supabase.js  index.ts  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  supabase_schema.sql  text.txt  tsconfig.json
V2/: App.tsx  package-lock.json
V3/: App.tsx
api/: client.ts
attached_assets/: Pasted--LOG-Loaded-meals-0-Nutrition-goals-calorie-goal-2000-c_1768067674786.txt  Pasted--body-html-ERROR-Error-generating-meal-plan-Error-Gener_1766937877888.txt  Pasted--casrl-venv-mohammadpeyman-Mohammads-MacBook-Air-main-b_1766948156161.txt  Pasted--casrl-venv-mohammadpeyman-Mohammads-MacBook-Air-main-f_1766938907245.txt  Pasted-I-need-you-to-implement-the-following-features-in-my-We_1765030024160.txt  Pasted-mohammadpeyman-Mohammads-MacBook-Air-main-backend-npm-r_1767995892574.txt  Pasted-mohammadpeyman-Mohammads-MacBook-Air-main-backend-npm-r_1768050212969.txt  todo_1768673071273.md  todo_1768675372524.md  wellnoosh-tasks-round3_1768745326208.md
components/: StarRating.tsx
config/: supabase.ts
constants/: DesignTokens.ts
context/: query-provider.tsx  supabase-provider.tsx  user-data-provider.tsx
docs/: GOOGLE_OAUTH_SETUP.md  PATH_FIXES_SUMMARY.md  REORGANIZATION_SUMMARY.md  SUPABASE_EMAIL_DEBUG.md  screen-layouts.md
hooks/: useMealPlans.ts  usePantry.ts
ios/: Podfile
legacy/: App-working.tsx  (+8 more)
(+388 files in other folders)
