[project]
name = "wellnoosh-app"
version = "0.1.0"
description = "packages for wellnoosh app start"
authors = [
    {name = "fabienrortais",email = "fabienrortais@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
